add: 用户表设计, 使用mp代码生成器生成User基本代码

--- a/chat-server/pom.xml
+++ b/chat-server/pom.xml
@@ -22,6 +22,11 @@
             <groupId>com.snwolf</groupId>
             <artifactId>chat-common-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-generator</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
