add: 接入微信SDK, 初步开发带参二维码接口

--- a/chat-server/pom.xml
+++ b/chat-server/pom.xml
@@ -27,6 +27,11 @@
             <artifactId>mybatis-plus-generator</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.binarywang</groupId>
+            <artifactId>weixin-java-mp</artifactId>
+            <version>4.4.0</version>
+        </dependency>
     </dependencies>
 
 </project>
