--- a/chat-server/src/main/resources/application.yml
+++ b/chat-server/src/main/resources/application.yml
@@ -23,3 +23,12 @@ spring:
   jackson:
     serialization:
       write-dates-as-timestamps: true
+wx:
+  mp:
+    #    callback:
+    callback: ${swchat.wx.callback}
+    configs:
+      - appId: ${swchat.wx.appId} # 第一个公众号的appid
+        secret: ${swchat.wx.secret} # 公众号的appsecret
+        token: ${swchat.wx.token} # 接口配置里的Token值
+        aesKey: ${swchat.wx.aesKey} # 接口配置里的EncodingAESKey值
