--- a/chat-server/pom.xml
+++ b/chat-server/pom.xml
@@ -32,6 +32,11 @@
             <artifactId>weixin-java-mp</artifactId>
             <version>4.4.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.19.0</version>
+        </dependency>
     </dependencies>
 
 </project>
