--- a/chat-server/src/main/resources/application.yml
+++ b/chat-server/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
     # Redis服务器端口号
     port: ${swchat.redis.port}
     # 使用的数据库索引，默认是0
-    database: 0
+    database: ${swchat.redis.database}
     # 连接超时时间
     timeout: 1800000
     # 设置密码
@@ -32,3 +32,5 @@ wx:
         secret: ${swchat.wx.secret} # 公众号的appsecret
         token: ${swchat.wx.token} # 接口配置里的Token值
         aesKey: ${swchat.wx.aesKey} # 接口配置里的EncodingAESKey值
+jwt:
+  secret: ${swchat.jwt.secret}
