--- a/chat-server/src/main/resources/application.yml
+++ b/chat-server/src/main/resources/application.yml
@@ -23,6 +23,9 @@ spring:
   jackson:
     serialization:
       write-dates-as-timestamps: true
+  mvc:
+    pathmatch:
+      matching-strategy: ANT_PATH_MATCHER
 wx:
   mp:
     #    callback:
