--- a/chat-framwork/chat-transaction/pom.xml
+++ b/chat-framwork/chat-transaction/pom.xml
@@ -5,21 +5,23 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.snwolf</groupId>
-        <artifactId>sw-chat</artifactId>
+        <artifactId>chat-framwork</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>chat-framwork</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>chat-common-starter</module>
-        <module>chat-transaction</module>
-    </modules>
+    <artifactId>chat-transaction</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.snwolf</groupId>
+            <artifactId>chat-common-starter</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
