--- a/chat-server/pom.xml
+++ b/chat-server/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>java-jwt</artifactId>
             <version>3.19.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.snwolf</groupId>
+            <artifactId>chat-transaction</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
