--- a/chat-framwork/chat-common-starter/pom.xml
+++ b/chat-framwork/chat-common-starter/pom.xml
@@ -95,6 +95,11 @@
             <groupId>org.redisson</groupId>
             <artifactId>redisson-spring-boot-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.rocketmq</groupId>
+            <artifactId>rocketmq-spring-boot-starter</artifactId>
+            <version>2.2.2</version>
+        </dependency>
     </dependencies>
 
 </project>
