--- a/chat-server/pom.xml
+++ b/chat-server/pom.xml
@@ -42,6 +42,11 @@
             <artifactId>chat-transaction</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.15.3</version>
+        </dependency>
     </dependencies>
 
 </project>
