--- a/chat-framwork/chat-oss-starter/pom.xml
+++ b/chat-framwork/chat-oss-starter/pom.xml
@@ -5,17 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.snwolf</groupId>
-        <artifactId>sw-chat</artifactId>
+        <artifactId>chat-framwork</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>chat-framwork</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>chat-common-starter</module>
-        <module>chat-transaction</module>
-        <module>chat-oss-starter</module>
-    </modules>
+    <artifactId>chat-oss-starter</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
