--- a/chat-server/pom.xml
+++ b/chat-server/pom.xml
@@ -47,6 +47,11 @@
             <artifactId>jsoup</artifactId>
             <version>1.15.3</version>
         </dependency>
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <version>8.4.5</version>
+        </dependency>
     </dependencies>
 
 </project>
